Added Logo and .gitignore

--- a/MAIN.html
+++ b/MAIN.html
@@ -9,7 +9,7 @@
 <body>
     <!-- Header -->
     <header>
-        <img src="https://via.placeholder.com/150" alt="Logo" class="header-logo">
+        <img src="Logo.png" alt="Logo" class="header-logo">
         <div class="line-container">
             <div class="line1"></div>
             <button class="btn-abgaben" onclick="alert('Hier können Sie Ihre Abgaben verwalten.')">Abgaben</button>
