implemented logic behind the swapping image of Ben

--- a/MAIN.html
+++ b/MAIN.html
@@ -66,6 +66,12 @@
         <button onclick="goToStartseite()">Zurück zur Startseite</button>
     </div>
 
+    <!-- Fortschritts-Bild -->
+    <div id="progress-image" class="progress-image hidden">
+    <img src="" alt="Progress Image" id="progress-img">
+    </div>
+
+
     <script src="script.js"></script>
 </body>
 </html>
