--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 <main id="view-container">
     <!-- Content will be loaded here -->
 </main>
+<footer class="footer">
+    <p>&copy; 2024 Assignment Submission System. Alle Rechte vorbehalten.</p>
+</footer>
 <script src="script.js"></script>
 </body>
 </html>
