Added an assignment view and fixed the upload.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <header>
-    <button class="logo-button" onclick="loadView('views/home.html', updateViewBasedOnLogin)">
+    <button class="logo-button" onclick="loadHome()">
         <img src="Logo.png" alt="Logo" class="header-logo">
     </button>
     <nav id="nav-links" class="hidden">
